--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <!DOCTYPE html>
   <meta charset="utf-8">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon.ico">
   <link rel="apple-touch-icon" href="./train-256.png">
@@ -12,21 +12,38 @@
   <title>Daily Delays</title>
   <link href="css/styles.css" rel="stylesheet">
 </head>
+
 <body>
   <div class="heading">
     <div><img class="logo" src="icons/train-white.png" width="32px"></div>
     <div class="title">Daily Delays</div>
   </div>
-  <div class="journey">
-    <select id="fromCRS1" name="fromCRS1" onchange="getData()"></select>
-    <span>To</span>
-    <select id="toCRS" name="toCRS" onchange="getData()"></select>
-  </div>
-  <div class="results">
-    <p>Upcoming Departures</p>
+<div class="swipeView">
+  <section class="outward">
+    <div class="journey">
+      <select id="fromCRS1" name="fromCRS1" onchange="getData()"></select>
+        <span>To</span>
+      <select id="toCRS1" name="toCRS1" onchange="getData()"></select>
+    </div>
+    <div class="results">
+    <p>Departures - Outward Journey</p>
     <table class="delay-list"></table>
   </div>
   <div class="nrcc-message"></div>
+  </section>
+  <section class="return">
+    <div class="journey">
+      <select disabled id="fromCRS2" name="fromCRS2"></select>
+      <span>To</span>
+      <select disabled id="toCRS2" name="toCRS2"></select>
+    </div>
+    <div class="results">
+    <p>Departures - Return Journey</p>
+    <table class="delay-list"></table>
+  </div>
+  <div class="nrcc-message"></div>
+  </section>
+</div>
   <div class="refresh">
     <span class="last-update"></span>
     <button class="button" onclick="getData()">Refresh</button>
@@ -34,6 +51,8 @@
   <!--- Load JavaScript and initialise Google Maps API -->
   <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 <footer class="footer">
 </footer>
+
 </html>
