Add service worker and improve nrcc message display

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="manifest" href="manifest.json">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-  <title>Daily Delays</title>
+  <title>Commutable</title>
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="heading">
     <div><img class="logo" src="icons/train-white.png" width="32px"></div>
-    <div class="title">Daily Delays</div>
+    <div class="title">Commutable</div>
   </div>
 <div class="swipeView">
   <section class="outward">
@@ -48,7 +48,6 @@
     <span class="last-update"></span>
     <button class="button" onclick="getData()">Refresh</button>
   </div>
-  <!--- Load JavaScript and initialise Google Maps API -->
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 
