Improve <select> styling

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <div class="swipeView">
   <section class="outward">
     <div class="journey">
-      <select id="fromCRS1" name="fromCRS1" onchange="getData()"></select>
+      <select class="select-outward" id="fromCRS1" name="fromCRS1" onchange="getData()"></select>
         <span>To</span>
-      <select id="toCRS1" name="toCRS1" onchange="getData()"></select>
+      <select class="select-outward" id="toCRS1" name="toCRS1" onchange="getData()"></select>
     </div>
     <div class="results">
     <p>Departures - Outward Journey</p>
@@ -33,9 +33,9 @@
   </section>
   <section class="return">
     <div class="journey">
-      <select disabled id="fromCRS2" name="fromCRS2"></select>
+      <select disabled class="select-return" id="fromCRS2" name="fromCRS2"></select>
       <span>To</span>
-      <select disabled id="toCRS2" name="toCRS2"></select>
+      <select disabled class="select-return" id="toCRS2" name="toCRS2"></select>
     </div>
     <div class="results">
     <p>Departures - Return Journey</p>
