Add slogan and reduce footer IO

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="heading">
     <div><img class="logo" src="icons/train-white.png" width="32px"></div>
     <div class="title">Commutable</div>
+    <div class="slogan">The Commuters Quick Reference</div>
   </div>
 <div class="swipeView">
   <section class="outward">
@@ -44,14 +45,16 @@
   <div class="nrcc-message"></div>
   </section>
 </div>
-  <div class="refresh">
-    <span class="last-update"></span>
-    <button class="button" onclick="getData()">Refresh</button>
-  </div>
+<div class="refresh">
+  <span class="last-update"></span>
+  <button class="button" onclick="getData()">Refresh</button>
+</div>
+
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 <footer class="footer">
+  Data supplied by <a href="https://nationalrail.co.uk">nationalrail.co.uk</a>
 </footer>
 
 </html>
