improve title styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </body>
 
 <footer class="footer">
-  Data supplied by <a href="https://nationalrail.co.uk">nationalrail.co.uk</a>
+  Data supplied by nationalrail.co.uk
 </footer>
 
 </html>
