Add 'Powered By NRE' acreditation.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </body>
 
 <footer class="footer">
-  Data supplied by nationalrail.co.uk
+  <img  class="credit" src="icons/NRE_Powered_logo.jpg" >
 </footer>
 
 </html>
