Add swipe indicators

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <select class="select-outward" id="toCRS1" name="toCRS1" onchange="getData()"></select>
     </div>
     <div class="results">
-    <p>Departures - Outward Journey</p>
+    <p>Departures - Outward Journey
+      <span class="swipe-left">></span>
+    </p>
     <table class="delay-list"></table>
   </div>
   <div class="nrcc-message"></div>
@@ -39,7 +41,8 @@
       <select disabled class="select-return" id="toCRS2" name="toCRS2"></select>
     </div>
     <div class="results">
-    <p>Departures - Return Journey</p>
+    <p>Departures - Return Journey
+      <span class="swipe-right"><</span></p>
     <table class="delay-list"></table>
   </div>
   <div class="nrcc-message"></div>
